# PoseSolve

./: .gitignore  DEVELOPMENT.md  PLAN.md  README.md  USER_GUIDE.md  cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md  rust.instructions.md
crates/solver/: Cargo.toml  README.md  SOLVER_INVESTIGATION_REPORT.md
crates/solver/src/: estimator.rs  geo.rs  lib.rs  optimizer.rs  projection.rs  types.rs
crates/solver/src/tests/: diagnostics.rs  estimation.rs  fixture_case.rs  geo_tests.rs  helpers.rs  input_validation.rs  mod.rs  optimizer_tests.rs  perfect_cases.rs  projection_tests.rs
cypress/: cypress.config.ts  tsconfig.json
cypress/support/: component.ts
src/: App.cy.tsx  App.tsx  global.d.ts  main.tsx  styles.css
src/components/: ImageCanvas.cy.tsx  ImageCanvas.test.tsx  ImageCanvas.tsx  LinkingPanel.tsx  PointsTable.cy.tsx  PointsTable.tsx  SolveResult.tsx  Toolbar.cy.tsx  Toolbar.tsx  WorldMap.cy.tsx  WorldMap.test.tsx  WorldMap.tsx
src/state/: store.test.ts  store.ts
src/types/: solver.ts  test-shims.d.ts
src/utils/: image.ts  imageDB.ts
src/worker/: solverWorker.ts
