[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

# Optional future numerics; kept commented until used to keep compile fast
# nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
# rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
